# p1-overdrive-ns

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/freqtrade/: ExternalDecisionStrategy.py  __init__.py
adapters/vedanta/: __init__.py  vedanta_enter_adapter.py  vedanta_exit_adapter.py
configs/: default.yaml
docs/: PRD.md  README_v2.md  UPGRADE_TO_V2.md
examples/learner_training/: setup_training.py
examples/llm_reasoning/: borderline_cases.py
scripts/: run_dev.sh  seed_examples.py
services/decision/: __init__.py  app.py
services/decision/automation/: __init__.py  n8n_workflow.json
services/decision/brains/: __init__.py  conformal.py  hazard_exit.py  llm_reasoner.py  xlstm.py
services/decision/core/: config.py  logging.py  utils.py
services/decision/datahub/: __init__.py  onchain_connector.py  tv_connector.py  vision_connector.py
services/decision/decision/: gates.py  pipeline.py  reasoner.py  trace.py  trace_logger.py
services/decision/execution/: __init__.py  circuit_breaker.py  freqtrade_adapter.py  mpc_exit.py
services/decision/gates/: vol.py  (+3 more)
services/featurehub/: __init__.py  app.py  schemas.py
services/vision/: app.py  schemas.py
tests/: test_decision_api.py  test_gates.py  test_hazard_and_mpc.py
update/p1-system-v2-overdrive-ns-llm/: CURSOR_PROMPT.txt  claude_prompt.txt
(+28 files in other folders)
